<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="button_red">Red</string>
    <string name="button_green">Green</string>
    <string name="button_blue">Blue</string>
    <string name="how_to_play">How to play:</string>
    <string name="tap_the_buttons_and_the_screen">Tap the buttons, and the screen</string>
</resources>
